--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main">
+      <p id="add-item">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+        <div class="add-item-wrapper">
+          <input id="new-task"class="task-new" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -22,19 +22,19 @@
       <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="button-edit">Edit</button>
+          <button class="button-delete">
             <img src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="go shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="go shopping" class="task-input">
+          <button class="button-edit">Save</button>
+          <button class="button-delete">
             <img src="./remove.svg">
           </button>
         </li>
@@ -43,10 +43,10 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
+          <button class="button-edit">Edit</button>
+          <button class="button-delete"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
