--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="add-item">
-        <label for="new-task">Add Item</label>
+        <label class="section-title" for="new-task">Add Item</label>
         <div class="add-item-wrapper">
           <input id="new-task"class="task-new" type="text">
-          <button>Add</button>
+          <button class="button button-add">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="section-title">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
+        <li class="tasks-list">
+          <input class="task-checkbox" type="checkbox">
           <label class="task-label">Pay Bills</label>
           <input type="text" class="task-input">
-          <button class="button-edit">Edit</button>
-          <button class="button-delete">
-            <img src="./remove.svg">
+          <button class="button button-edit">Edit</button>
+          <button class="button button-delete">
+            <img class = "button-delete-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
+        <li class="tasks-list edit-mode">
+          <input class="task-checkbox" type="checkbox">
           <label class="task-label">Go Shopping</label>
           <input type="text" value="go shopping" class="task-input">
-          <button class="button-edit">Save</button>
-          <button class="button-delete">
-            <img src="./remove.svg">
+          <button class="button button-edit">Save</button>
+          <button class="button button-delete">
+            <img class = "button-delete-img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="section-title">Completed</h3>
       <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+        <li class="tasks-list">
+          <input class="task-checkbox" type="checkbox" checked>
           <label class="task-label">See the Doctor</label>
           <input type="text" class="task-input">
-          <button class="button-edit">Edit</button>
-          <button class="button-delete"><img src="./remove.svg"></button>
+          <button class="button button-edit">Edit</button>
+          <button class="button button-delete"><img class = "button-delete-img" src="./remove.svg"></button>
         </li>
       </ul>
     </div>
