--- a/index.html
+++ b/index.html
@@ -6,50 +6,57 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img class="header-img" src="./eisenhower-matrix.jpg">
       <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-item">
-        <label class="section-title" for="new-task">Add Item</label>
+      <h1 class="header-title-hidden">Title</h1>
+    </header>
+    <main class="main">
+      <section>
+        <h2 class="section-title">
+          <label for="new-task">Add Item</label>
+        </h2>
         <div class="add-item-wrapper">
           <input id="new-task"class="task-new" type="text">
           <button class="button button-add">Add</button>
         </div>
-      </p>
-      <h3 class="section-title">Todo</h3>
-      <ul id="incomplete-tasks">
-        <li class="tasks-list">
-          <input class="task-checkbox" type="checkbox">
-          <label class="task-label">Pay Bills</label>
-          <input type="text" class="task-input">
-          <button class="button button-edit">Edit</button>
-          <button class="button button-delete">
-            <img class = "button-delete-img" src="./remove.svg">
-          </button>
-        </li>
-        <li class="tasks-list edit-mode">
-          <input class="task-checkbox" type="checkbox">
-          <label class="task-label">Go Shopping</label>
-          <input type="text" value="go shopping" class="task-input">
-          <button class="button button-edit">Save</button>
-          <button class="button button-delete">
-            <img class = "button-delete-img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="section-title">Completed</h3>
-      <ul id="completed-tasks">
-        <li class="tasks-list">
-          <input class="task-checkbox" type="checkbox" checked>
-          <label class="task-label">See the Doctor</label>
-          <input type="text" class="task-input">
-          <button class="button button-edit">Edit</button>
-          <button class="button button-delete"><img class = "button-delete-img" src="./remove.svg"></button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h2 class="section-title">Todo</h2>
+        <ul id="incomplete-tasks">
+          <li class="tasks-list">
+            <input class="task-checkbox" type="checkbox">
+            <label class="task-label">Pay Bills</label>
+            <input type="text" class="task-input">
+            <button class="button button-edit">Edit</button>
+            <button class="button button-delete">
+              <img class = "button-delete-img" src="./remove.svg">
+            </button>
+          </li>
+          <li class="tasks-list edit-mode">
+            <input class="task-checkbox" type="checkbox">
+            <label class="task-label">Go Shopping</label>
+            <input type="text" value="go shopping" class="task-input">
+            <button class="button button-edit">Save</button>
+            <button class="button button-delete">
+              <img class = "button-delete-img" src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="section-title">Completed</h2>
+        <ul id="completed-tasks">
+          <li class="tasks-list">
+            <input class="task-checkbox" type="checkbox" checked>
+            <label class="task-label">See the Doctor</label>
+            <input type="text" class="task-input">
+            <button class="button button-edit">Edit</button>
+            <button class="button button-delete"><img class = "button-delete-img" src="./remove.svg"></button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
