--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
       <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       <h1 class="header-title-hidden">Title</h1>
     </header>
@@ -30,7 +30,7 @@
             <input type="text" class="task-input">
             <button class="button button-edit">Edit</button>
             <button class="button button-delete">
-              <img class = "button-delete-img" src="./remove.svg">
+              <img class = "button-delete-img" src="./remove.svg" alt="delete icon">
             </button>
           </li>
           <li class="tasks-list edit-mode">
@@ -39,7 +39,7 @@
             <input type="text" value="go shopping" class="task-input">
             <button class="button button-edit">Save</button>
             <button class="button button-delete">
-              <img class = "button-delete-img" src="./remove.svg">
+              <img class = "button-delete-img" src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
@@ -52,7 +52,7 @@
             <label class="task-label">See the Doctor</label>
             <input type="text" class="task-input">
             <button class="button button-edit">Edit</button>
-            <button class="button button-delete"><img class = "button-delete-img" src="./remove.svg"></button>
+            <button class="button button-delete"><img class = "button-delete-img" src="./remove.svg" alt="delete icon"></button>
           </li>
         </ul>
       </section>
