--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-      <h1 class="header-title-hidden">Title</h1>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <h1 class="header__title-hidden">Title</h1>
     </header>
     <main class="main">
       <section>
@@ -18,7 +18,7 @@
         </h2>
         <div class="add-item-wrapper">
           <input id="new-task"class="task-new" type="text">
-          <button class="button button-add">Add</button>
+          <button class="button button_add">Add</button>
         </div>
       </section>
       <section>
@@ -28,18 +28,18 @@
             <input class="task-checkbox" type="checkbox">
             <label class="task-label">Pay Bills</label>
             <input type="text" class="task-input">
-            <button class="button button-edit">Edit</button>
-            <button class="button button-delete">
-              <img class = "button-delete-img" src="./remove.svg" alt="delete icon">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img class = "button__img" src="./remove.svg" alt="delete icon">
             </button>
           </li>
           <li class="tasks-list edit-mode">
             <input class="task-checkbox" type="checkbox">
             <label class="task-label">Go Shopping</label>
             <input type="text" value="go shopping" class="task-input">
-            <button class="button button-edit">Save</button>
-            <button class="button button-delete">
-              <img class = "button-delete-img" src="./remove.svg" alt="delete icon">
+            <button class="button button_edit">Save</button>
+            <button class="button button_delete">
+              <img class = "button__img" src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
@@ -51,8 +51,8 @@
             <input class="task-checkbox" type="checkbox" checked>
             <label class="task-label">See the Doctor</label>
             <input type="text" class="task-input">
-            <button class="button button-edit">Edit</button>
-            <button class="button button-delete"><img class = "button-delete-img" src="./remove.svg" alt="delete icon"></button>
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete"><img class = "button__img" src="./remove.svg" alt="delete icon"></button>
           </li>
         </ul>
       </section>
