--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="tasks-list edit-mode">
               <input class="task-checkbox" type="checkbox">
               <label class="task-label">Go Shopping</label>
-              <input type="text" value="go shopping" class="task-input">
+              <input type="text" value="Go Shopping" class="task-input">
               <button class="button button_edit">Save</button>
               <button class="button button_delete">
                 <img class = "button__img" src="./remove.svg" alt="delete icon">
