refactor(extended-2.1):give an element the name according to BEM

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </header>
       <main class="main">
         <section>
-          <h2 class="section-title">
+          <h2 class="section-title section-title_new">
             <label for="new-task">Add Item</label>
           </h2>
           <div class="add-item-wrapper">
